--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div id="game-choice-container">
+        <button class="game-choice">Rock</button>
+        <button class="game-choice">Paper</button>
+        <button class="game-choice">Scissors</button>
+    </div>
+    <button id="play-button">Play</button>
+
 <script src="./script.js"></script>
 </body>
 </html>
