Make game fully playable on UI

--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
 </head>
+
 <body>
     <div id="game-choice-container">
         <button class="game-choice">Rock</button>
         <button class="game-choice">Paper</button>
         <button class="game-choice">Scissors</button>
     </div>
+    <div id="log-content">
+        <div id="game-play-log"></div>
+        <div id="score-log"></div>
+    </div>
 
-<script src="./script.js"></script>
+    <script src="./script.js"></script>
 </body>
+
 </html>
