--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -13,10 +14,11 @@
         <button class="game-choice">Paper</button>
         <button class="game-choice">Scissors</button>
     </div>
-    <div id="log-content">
+    <div id="log-container">
         <div id="game-play-log"></div>
         <div id="score-log"></div>
     </div>
+    <div id="restart"></div>
 
     <script src="./script.js"></script>
 </body>
