Add restart button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="game-choice-container">
+    <div class="button-container">
         <button class="game-choice">Rock</button>
         <button class="game-choice">Paper</button>
         <button class="game-choice">Scissors</button>
@@ -18,7 +18,7 @@
         <div id="game-play-log"></div>
         <div id="score-log"></div>
     </div>
-    <div id="restart"></div>
+    <div id="restart-container" class="button-container"></div>
 
     <script src="./script.js"></script>
 </body>
