feat: implement full gameplay logic
- Developed core game functions, including score tracking and result
calculation
- Added interactive play mechanics with button-based selection
- Integrated animations and smooth transitions for a polished experience
- Enhanced gameplay flow with round progression and game-over logic

--- a/index.html
+++ b/index.html
@@ -19,38 +19,7 @@
 
     <h1>ROCK PAPER SCISSORS</h1>
 
-    <div class="board">
-        <!--
-         <div class="display-message" id="display-message">CHOOSE YOUR PLAY:</div>
-
-        <div class="play-icons">
-            <button class="icon r-icon"></button>
-            <button class="icon p-icon"></button>
-            <button class="icon s-icon"></button>
-            <div class="button-descriptor">ROCK</div>
-            <div class="button-descriptor">PAPER</div>
-            <div class="button-descriptor">SCISSORS</div>
-        </div>
-         -->
-
-        <!-- 
-         <div class="display-message" id="display-message"></div>
-
-         <div class="hands">
-            <img src="./assets/play/r-l.png" alt="" class="left-hand fist">
-            <img src="./assets/play/r-r.png" alt="" class="right-hand fist">
-         </div>
-         -->
-
-        <!--
-        <div class="display-message" id="display-message"> YOU WIN!</div>
-        <button class="next-round">NEXT ROUND</button>
-
-        <div class="hands">
-            <img src="./assets/play/r-l.png" alt="" class="left-hand">
-            <img src="./assets/play/r-r.png" alt="" class="right-hand">
-        </div> 
-        -->
+    <div class="board" id="board">
 
     </div>
 
@@ -58,8 +27,8 @@
         <div class="player-score">
             YOU
             <div id="self-points" class="points">
-                <div class="point scored"></div>
-                <div class="point scored"></div>
+                <div class="point"></div>
+                <div class="point"></div>
                 <div class="point"></div>
                 <div class="point"></div>
                 <div class="point"></div>
@@ -71,8 +40,8 @@
                 <div class="point"></div>
                 <div class="point"></div>
                 <div class="point"></div>
-                <div class="point scored"></div>
-                <div class="point scored"></div>
+                <div class="point"></div>
+                <div class="point"></div>
             </div>
             CPU
         </div>
