feat: add signature

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
         </div>
     </div>
 
+    <div class="signature">
+        Designed and developed by <a href="http://www.javierquiroga.com" target="_blank" rel="noopener noreferrer"
+            title="Visit my portfolio">Javier
+            Quiroga</a> - Check it out on <a href="https://github.com/cd-javier/rock-paper-scissors" target="_blank"
+            rel="noopener noreferrer">GitHub</a>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 
